[gd_scene load_steps=4 format=3 uid="uid://ljc4hmyxkhsv"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_rb68l"]
[ext_resource type="Script" path="res://scenes/hud/hpbar.gd" id="2_0if7c"]
[ext_resource type="Script" path="res://scenes/hud/hpbar2.gd" id="3_5a84v"]

[node name="HUD" type="Node2D"]
script = ExtResource("1_rb68l")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimerDisplay" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Tens" type="TextureRect" parent="TimerDisplay"]
layout_mode = 2

[node name="Ones" type="TextureRect" parent="TimerDisplay"]
layout_mode = 2

[node name="Player1HP" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="Player1HP"]
offset_right = 124.0
offset_bottom = 27.0
value = 100.0
script = ExtResource("2_0if7c")
metadata/_edit_use_anchors_ = true

[node name="Player2HP" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="Player2HP"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_bottom = 27.0
grow_horizontal = 0
value = 100.0
script = ExtResource("3_5a84v")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
